--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,10 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.LeanIX</groupId>
-	<artifactId>spring-boot-security-jwt</artifactId>
+	<artifactId>ToDo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>spring-boot-security-jwt</name>
-	<description>Demo project for Spring Boot Security - JWT</description>
+	<name>ToDO</name>
+	<description>ToDo API's</description>
 
 	<properties>
 		<java.version>1.8</java.version>
